<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent" tools:context=".activity.exhibitlist.MainActivity">

  <include
      android:id="@+id/imageView2"
      layout="@layout/top_bar"

      />

  <TextView
      android:id="@+id/textView2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="108dp"
      android:layout_marginTop="40dp"
      android:layout_marginEnd="250dp"
      android:text="ZooSeeker"
      android:textColor="@color/white"
      android:textSize="20dp"
      app:layout_constraintEnd_toEndOf="@+id/imageView2"
      app:layout_constraintHorizontal_bias="0.038"
      app:layout_constraintStart_toStartOf="@+id/imageView2"
      app:layout_constraintTop_toTopOf="@+id/imageView2" />

  <Button android:id="@+id/plan_bttn"
      android:layout_width="80dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="36dp"
      android:text="Plan"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <EditText
      android:id="@+id/search_bar"
      android:layout_width="0dp"
      android:layout_height="47dp"
      android:layout_marginStart="24dp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="24dp"
      android:backgroundTint="@color/black"
      android:hint="Search exhibits"
      android:shadowColor="#454545"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView2" />

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/exhibit_list"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginTop="4dp"
      android:paddingLeft="24dp"
      android:paddingRight="24dp"
      app:layout_constraintBottom_toTopOf="@+id/compact_list"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/search_bar" />

  <Button
      android:id="@+id/exhibit_clear_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginBottom="16dp"
      android:backgroundTint="@color/green_700"
      android:text="Clear Selected"
      android:textSize="12sp"
      android:onClick="onClearExhibitsPressed"
      app:layout_constraintBottom_toTopOf="@+id/search_bar"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toEndOf="@+id/textView2"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/compact_list"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:gravity="left"
      android:paddingLeft="24dp"
      android:paddingRight="24dp"
      android:paddingTop="8dp"
      android:paddingBottom="8dp"
      android:hint="No Exhibits Selected"
      app:layout_constraintBottom_toTopOf="@+id/plan_bttn"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>