...
        android:id="@+id/planned_exhibits"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingLeft="24dp"
        android:paddingTop="24dp"
        android:paddingRight="24dp"
        app:layout_constraintBottom_toTopOf="@+id/nav_bttn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <include
...

    <Button
        android:id="@+id/nav_bttn"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="Navigate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
