<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="64dp">

    <TextView
        android:id="@+id/exhibit_name"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_vertical"
        android:hint="Sample Exhibit"
        android:inputType="text"
        android:maxLines="1"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/selected"
        android:layout_width="30dp"
        android:layout_height="0dp"
        android:layout_marginStart="-24dp"
        android:buttonTint="@color/green_500"
        app:layout_constraintBottom_toBottomOf="@+id/exhibit_name"
        app:layout_constraintStart_toEndOf="@+id/exhibit_name"
        app:layout_constraintTop_toTopOf="@+id/exhibit_name"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>